--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev" : "next dev",
     "build": "next build",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
