--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "homepage": "https://Donguk-Owen-Kim.github.io",
   "scripts": {
-    "dev" : "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,10 +24,10 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5",
-    "eslint": "^8.56.0"
+    "typescript": "^5"
   }
 }
